fix: code adjustments and cancel endpoint
